# cookiecutter-gcp-cloud-function-python

./: README.md  cookiecutter.json  pyproject.toml  update_cookiecutter_config.py
{{ cookiecutter.project_slug }}/: .env.yaml  .gcloudignore  .gitignore  Pipfile  cloudbuild.yaml  deploy.sh  main.py  package.json  pyproject.toml  setup.cfg
{{ cookiecutter.project_slug }}/templates/: index.html
{{ cookiecutter.project_slug }}/tests/: conftest.py  test_main.py
