[tool.poetry]
name = "cookiecutter-gcp-cloud-function-python"
version = "0.1.1"
description = "Cookiecutter template for creating Google Cloud Function with Python runtime"
authors = ["Pawel Zukowski <p.z.idlecode@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
